--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,10 +2,9 @@ include LICENSE
 include README.rst
 include setup.cfg
 include tox.ini
-include requirements.txt
-include test_requirements.txt
-include docs_requirements.txt
 recursive-include test *
+recursive-include requirements *
+recursive-include misc *
 
 global-exclude __pycache__/*
 global-exclude *.pyc
