--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,9 +2,10 @@ include LICENSE
 include README.rst
 include setup.cfg
 include tox.ini
-recursive-include test *
+
+recursive-include docs *
 recursive-include requirements *
-recursive-include misc *
+recursive-include test *
 
 global-exclude __pycache__/*
 global-exclude *.pyc
