--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py{26,27,33,34}
+envlist = python{2.6,2.7,3.3,3.4,3.5}
 
 [testenv]
 deps =
     pytest
+    
 commands =
     python setup.py test
     
