--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,10 +2,10 @@ include LICENSE
 include README.rst
 include setup.cfg
 include tox.ini
+include docs/pages/introduction/summary.txt
 
-recursive-include docs *
-recursive-include requirements *
 recursive-include test *
+recursive-include requirements *
 
 global-exclude __pycache__/*
 global-exclude *.pyc
