--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,8 @@
 beautifulsoup4
-DataProperty>=0.9.0
+DataProperty>=0.10.0
 jsonschema
-pathvalidate>=0.7.1
+pathvalidate>=0.8.3
+pytablereader>=0.2.0
 path.py
 six
 xlrd
