--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,7 @@
 DataProperty>=0.16.2
-mbstrdecoder>=0.2.1
-logbook
-pathvalidate>=0.13.0
-pytablereader>=0.8.8
+mbstrdecoder>=0.2.2
+logbook>=1.0.0
+pathvalidate>=0.14.1
+pytablereader>=0.8.9
 six
 typepy>=0.0.4
