--- a/pylama.ini
+++ b/pylama.ini
@@ -10,3 +10,7 @@ max_line_length = 100
 [pylama:*/__init__.py]
 # W0611: imported but unused [pyflakes]
 ignore = W0611
+
+[pylama:test/*.py]
+# W0404: W0404 redefinition of unused xxx [pyflakes]
+ignore = W0404
