--- a/pylama.ini
+++ b/pylama.ini
@@ -11,6 +11,11 @@ max_line_length = 100
 # W0611: imported but unused [pyflakes]
 ignore = W0611
 
+[pylama:simplesqlite/query.py]
+# W605:  invalid escape sequence 'xxx' [pycodestyle]
+ignore = W605
+
 [pylama:test/*.py]
 # W0404: W0404 redefinition of unused xxx [pyflakes]
-ignore = W0404
+# W605:  invalid escape sequence 'xxx' [pycodestyle]
+ignore = W0404,W605
