--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,7 +2,8 @@ DataProperty>=0.31.1
 logbook
 mbstrdecoder
 msgfy>=0.0.2
-pathvalidate>=0.17.3
+pathvalidate>=0.19.0
 six
-tabledata>=0.0.18
+sqliteschema>=0.11.0
+tabledata>=0.0.20
 typepy>=0.1.1
