--- a/pylama.ini
+++ b/pylama.ini
@@ -17,5 +17,4 @@ ignore = W605
 
 [pylama:test/*.py]
 # W0404: W0404 redefinition of unused xxx [pyflakes]
-# W605:  invalid escape sequence 'xxx' [pycodestyle]
-ignore = W0404,W605
+ignore = W0404
