--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,9 +1,9 @@
 DataProperty>=0.37.1,<1.0.0
-logbook
-mbstrdecoder[all]
+logbook>=1.1.0,<2.0.0
+mbstrdecoder[all]>=0.6.2,<1.0.0
 msgfy>=0.0.4,<0.1.0
-pathvalidate>=0.22.0,<1.0.0
-six
-sqliteschema>=0.13.7,<1.0.0
-tabledata>=0.1.1,<1.0.0
+pathvalidate>=0.23.0,<1.0.0
+six>=1.11.0,<2.0.0
+sqliteschema>=0.13.8,<1.0.0
+tabledata>=0.2.1,<1.0.0
 typepy>=0.3.2,<1.0.0
