--- a/pylama.ini
+++ b/pylama.ini
@@ -18,3 +18,7 @@ ignore = W605
 [pylama:test/*.py]
 # W0404: W0404 redefinition of unused xxx [pyflakes]
 ignore = W0404
+
+[pylama:test/test_logger.py]
+# E402: module level import not at top of file [pycodestyle]
+ignore = E402
