--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,4 @@ include_trailing_comma = true
 line_length=100
 lines_after_imports=2
 multi_line_output=3
-skip_glob="*/.eggs/*,*/.tox*,opencv/*"
+skip_glob="*/.eggs/*,*/.tox*"
