--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,15 @@ exclude = '''
 '''
 
 [tool.isort]
-dont_skip="*/**/__init__.py"
-known_third_party= """
-pandas
-"""
+dont_skip = "*/**/__init__.py"
+known_third_party = [
+    "pandas",
+]
 include_trailing_comma = true
-line_length=100
-lines_after_imports=2
-multi_line_output=3
-skip_glob="*/.eggs/*,*/.tox*"
+line_length = 100
+lines_after_imports = 2
+multi_line_output = 3
+skip_glob = [
+    '*/.eggs/*',
+    '*/.tox/*',
+]
