--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,21 @@ skip_glob = [
     '*/.eggs/*',
     '*/.tox/*',
 ]
+
+[tool.coverage.run]
+source = ['simplesqlite']
+branch = true
+
+[tool.coverage.report]
+show_missing = true
+precision = 1
+exclude_lines = [
+    'except ImportError',
+    'raise NotImplementedError',
+    'pass',
+    'ABCmeta',
+    'abstractmethod',
+    'abstractproperty',
+    'abstractclassmethod',
+    'warnings.warn',
+]
