--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,16 @@ envlist = py{27,35,36,37,38},cov
 [testenv]
 deps =
     .[test]
-    
+
 commands =
     python setup.py test
+
+[testenv:cov]
+autoupgrade_pip = true
+deps =
+    .[test]
+    coverage[toml]
+    coveralls
+    pytest-cov
+commands =
+    python setup.py test --addopts "-v --cov"
