--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,7 +1,7 @@
-DataProperty>=0.43.1,<1.0.0
-mbstrdecoder[all]>=0.8.0,<1.0.0
-pathvalidate>=0.28.0,<1.0.0
+DataProperty>=0.43.2,<1
+mbstrdecoder>=0.8.3,<1
+pathvalidate>=0.29.1,<2
 six>=1.10.0,<2.0.0
 sqliteschema>=0.16.2,<1.0.0
 tabledata>=0.9.1,<1.0.0
-typepy>=0.6.0,<1.0.0
+typepy>=0.6.4,<1
