Add testenv:fmt to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{27,35,36,37,38}
     pypy3
     cov
+    fmt
 
 [testenv]
 deps =
@@ -17,3 +18,14 @@ deps =
     pytest-cov
 commands =
     python setup.py test --addopts "-v --cov"
+
+[testenv:fmt]
+basepython = python3.8
+deps =
+    autoflake
+    black
+    isort
+commands =
+    black setup.py test simplesqlite
+    autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
+    isort --apply --recursive
