Add testenv:build to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     py{27,35,36,37,38}
     pypy3
+    build
     cov
     fmt
 
@@ -10,6 +11,16 @@ deps =
     .[test]
 commands =
     python setup.py test
+
+[testenv:build]
+basepython = python3.8
+deps =
+    twine
+    wheel
+commands =
+    python setup.py sdist bdist_wheel
+    twine check dist/*
+    python setup.py clean --all
 
 [testenv:cov]
 deps =
