Add testenv:readme to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     build
     cov
     fmt
+    readme
 
 [testenv]
 deps =
@@ -40,3 +41,11 @@ commands =
     black setup.py test simplesqlite
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
     isort --apply --recursive
+
+[testenv:readme]
+basepython = python3.8
+changedir = docs
+deps =
+    readmemaker>=1.0.0
+commands =
+    python make_readme.py
