Add testenv:clean to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{27,35,36,37,38}
     pypy3
     build
+    clean
     cov
     fmt
     readme
@@ -20,6 +21,13 @@ commands =
     python setup.py sdist bdist_wheel
     twine check dist/*
     python setup.py clean --all
+
+[testenv:clean]
+basepython = python3.8
+deps =
+    cleanpy
+commands =
+    cleanpy --include-build-cache .
 
 [testenv:cov]
 deps =
