Remove deprecated setup.py test command

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,10 @@ envlist =
     readme
 
 [testenv]
+deps =
+    .[test]
 commands =
-    python setup.py test
+    pytest
 
 [testenv:build]
 basepython = python3.8
@@ -31,10 +33,11 @@ commands =
 
 [testenv:cov]
 deps =
+    .[test]
     coverage[toml]
     pytest-cov
 commands =
-    python setup.py test --addopts "-v --cov"
+    pytest -vv --cov
 
 [testenv:fmt]
 basepython = python3.8
