--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,7 @@ commands =
 basepython = python3.8
 changedir = docs
 deps =
+    path
     readmemaker>=1.0.0
 commands =
     python make_readme.py
