--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     build
     clean
     cov
+    docs
     fmt
     readme
     release
@@ -39,6 +40,13 @@ deps =
     pytest-cov
 commands =
     pytest -vv --cov
+
+[testenv:docs]
+basepython = python3.8
+deps =
+    -r{toxinidir}/requirements/docs_requirements.txt
+commands =
+    python setup.py build_sphinx --source-dir=docs/ --build-dir=docs/_build --all-files
 
 [testenv:fmt]
 basepython = python3.8
