--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
     clean
     cov
     docs
+    lint
     fmt
     readme
     release
@@ -58,6 +59,18 @@ commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
     isort --apply --recursive
     black setup.py test simplesqlite
+
+[testenv:lint]
+basepython = python3.7
+deps =
+    codespell
+    pylama
+    cleanpy
+commands =
+    cleanpy --include-build .
+    python setup.py check
+    codespell simplesqlite docs sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
+    pylama
 
 [testenv:readme]
 basepython = python3.8
