--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ basepython = python3.8
 deps =
     autoflake
     black
-    isort
+    isort[pyproject]
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
     isort --apply --recursive
