--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,8 +1,6 @@
 DataProperty>=0.46.3,<2
 mbstrdecoder>=0.8.3,<2
-pathvalidate<1; python_version < "3.5"
-pathvalidate<3; python_version >="3.5"
-six>=1.10.0,<2
+pathvalidate<3
 sqliteschema>=0.17.4,<2
 tabledata>=0.10.3,<2
 typepy>=0.6.4,<2
