--- a/tox.ini
+++ b/tox.ini
@@ -64,11 +64,15 @@ commands =
 basepython = python3.7
 deps =
     codespell
+    mypy
     pylama
+    pytype
     cleanpy
 commands =
     cleanpy --include-build .
     python setup.py check
+    mypy simplesqlite --show-error-context --show-error-codes --ignore-missing-imports --python-version 3.5
+    pytype --keep-going --jobs 4 --disable import-error,pyi-error simplesqlite
     codespell simplesqlite docs sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
     pylama
 
