--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ basepython = python3.8
 deps =
     cleanpy
 commands =
-    cleanpy --all .
+    cleanpy --all --exclude-envs .
 
 [testenv:cov]
 deps =
