--- a/pylama.ini
+++ b/pylama.ini
@@ -7,6 +7,11 @@ complexity=15
 [pylama:pycodestyle]
 max_line_length = 100
 
+# E203: whitespace before ':' (for black)
+# E231 missing whitespace after ',' [pycodestyle]
+# W503: line break before binary operator (for black)
+ignore = E203,E231,W503
+
 [pylama:pylint]
 max_line_length = 100
 
