Modify commands for testenvs

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps =
     wheel
 commands =
     python setup.py sdist bdist_wheel
-    twine check dist/*
+    twine check dist/*.whl dist/*.tar.gz
     python setup.py clean --all
 
 [testenv:clean]
@@ -57,7 +57,7 @@ deps =
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
     isort --apply --recursive
-    black setup.py test simplesqlite
+    black setup.py test sample simplesqlite
 
 [testenv:lint]
 basepython = python3.7
@@ -72,7 +72,7 @@ commands =
     python setup.py check
     mypy simplesqlite --show-error-context --show-error-codes --ignore-missing-imports --python-version 3.5
     pytype --keep-going --jobs 4 --disable import-error,pyi-error simplesqlite
-    codespell simplesqlite docs sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
+    codespell simplesqlite docs/pages sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
     pylama
 
 [testenv:readme]
