Add tool.pytest.ini_options to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,3 +58,9 @@ exclude_lines = [
     'abstractclassmethod',
     'warnings.warn',
 ]
+
+[tool.pytest.ini_options]
+testpaths = [
+    "test",
+]
+
