--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
     python setup.py clean --all
 
 [testenv:clean]
+skip_install = true
 deps =
     cleanpy
 commands =
@@ -49,6 +50,7 @@ commands =
 
 [testenv:fmt]
 basepython = python3.8
+skip_install = true
 deps =
     autoflake
     black
@@ -60,6 +62,7 @@ commands =
 
 [testenv:lint]
 basepython = python3.8
+skip_install = true
 deps =
     codespell
     mypy
