--- a/pylama.ini
+++ b/pylama.ini
@@ -8,9 +8,8 @@ complexity=15
 max_line_length = 100
 
 # E203: whitespace before ':' (for black)
-# E231 missing whitespace after ',' [pycodestyle]
 # W503: line break before binary operator (for black)
-ignore = E203,E231,W503
+ignore = E203,W503
 
 [pylama:pylint]
 max_line_length = 100
