--- a/tox.ini
+++ b/tox.ini
@@ -71,7 +71,7 @@ deps =
 commands =
     cleanpy --include-build .
     python setup.py check
-    mypy simplesqlite --show-error-context --show-error-codes --ignore-missing-imports --python-version 3.5
+    mypy simplesqlite
     codespell simplesqlite docs/pages sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
     pylama
 
