--- a/tox.ini
+++ b/tox.ini
@@ -67,13 +67,11 @@ deps =
     codespell
     mypy
     pylama
-    cleanpy
 commands =
-    cleanpy --include-build .
     python setup.py check
     mypy simplesqlite
     codespell simplesqlite docs/pages sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
-    pylama
+    pylama setup.py test sample simplesqlite
 
 [testenv:readme]
 changedir = docs
