--- a/pylama.ini
+++ b/pylama.ini
@@ -5,7 +5,7 @@ skip = .eggs/*,.tox/*,*/.env/*,_sandbox/*,build/*,docs/conf.py
 complexity=15
 
 [pylama:pycodestyle]
-max_line_length = 100
+max_line_length = 120
 
 # E203: whitespace before ':' (for black)
 # W503: line break before binary operator (for black)
@@ -24,7 +24,8 @@ ignore = W605
 
 [pylama:test/*.py]
 # W0404: W0404 redefinition of unused xxx [pyflakes]
-ignore = W0404
+# W0611: imported but unused [pyflakes]
+ignore = W0404,W0611
 
 [pylama:test/test_logger.py]
 # E402: module level import not at top of file [pycodestyle]
