--- a/tox.ini
+++ b/tox.ini
@@ -37,9 +37,10 @@ commands =
 deps =
     .[test]
     coverage[toml]
-    pytest-cov
+    coverage[toml]>=5
 commands =
-    pytest --cov {posargs:-vv}
+    coverage run -m pytest {posargs:-vv}
+    coverage report -m
 
 [testenv:docs]
 basepython = python3.8
