Use extras in tox.ini instead of self-referencing the package in deps

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,8 @@ envlist =
     readme
 
 [testenv]
-deps =
-    .[test]
+extras =
+    test
 commands =
     pytest {posargs}
 
@@ -34,9 +34,9 @@ commands =
     cleanpy --all --exclude-envs .
 
 [testenv:cov]
+extras =
+    test
 deps =
-    .[test]
-    coverage[toml]
     coverage[toml]>=5
 commands =
     coverage run -m pytest {posargs:-vv}
