Update deps of testenvs

--- a/tox.ini
+++ b/tox.ini
@@ -52,8 +52,8 @@ commands =
 [testenv:fmt]
 skip_install = true
 deps =
-    autoflake
-    black
+    autoflake>=1.4
+    black>=22.1
     isort>=5
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
@@ -64,8 +64,8 @@ commands =
 skip_install = true
 deps =
     codespell
-    mypy>=0.902
-    pylama
+    mypy>=0.931
+    pylama>=8.3.6
 commands =
     python setup.py check
     mypy simplesqlite
