--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -26,48 +26,52 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, 3.10.0-beta.2, pypy3]
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', pypy3]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        exclude:
+          - os: macos-latest
+            python-version: 'pypy3'
+          - os: windows-latest
+            python-version: 'pypy3'
+          - os: windows-latest
+            python-version: '3.6'
     timeout-minutes: 20
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install pip
-        id: install-pip
-        run: |
-          python -m pip install --upgrade "pip>=21.1"
+        run: python -m pip install --upgrade --disable-pip-version-check "pip>=21.1"
 
       - name: Get pip cache dir
         id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
+        run: echo "::set-output name=dir::$(pip cache dir)"
 
       - name: Cache pip
         uses: actions/cache@v2
         with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ matrix.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ matrix.os }}-${{ matrix.python-version }}-pip-
+          path: |
+            ${{ steps.pip-cache.outputs.dir }}
+            ./.tox
+          key: ${{ matrix.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('setup.py', '**/requirements.txt') }}
+          restore-keys: ${{ matrix.os }}-${{ matrix.python-version }}-pip-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade tox
 
       - name: Run tests
-        run: |
-          tox -e cov -- --discord-verbose=0
+        run: tox -e cov -- --discord-verbose=0
 
       - name: Upload coverage report
-        run: |
-          python -m pip install --upgrade coveralls
-          coveralls --service=github
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
+        run: |
+          python -m pip install --upgrade --disable-pip-version-check coveralls tomli
+          coveralls --service=github
