--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -29,13 +29,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', pypy3]
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', 'pypy-3.8']
         os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
-          - os: macos-latest
-            python-version: 'pypy3'
-          - os: windows-latest
-            python-version: 'pypy3'
           - os: windows-latest
             python-version: '3.6'
     timeout-minutes: 30
