Use extras in tox.ini instead of self-referencing the package in deps

--- a/tox.ini
+++ b/tox.ini
@@ -34,9 +34,8 @@ commands =
     cleanpy --all --exclude-envs .
 
 [testenv:cov]
-extras =
-    test
 deps =
+    .[test]
     coverage[toml]>=5
 commands =
     coverage run -m pytest {posargs:-vv}
