Update deps of testenvs

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
 [testenv:clean]
 skip_install = true
 deps =
-    cleanpy>=0.3.1
+    cleanpy>=0.4
 commands =
     cleanpy --all --exclude-envs .
 
@@ -48,8 +48,8 @@ commands =
 [testenv:fmt]
 skip_install = true
 deps =
-    autoflake>=1.4
-    black>=22.1
+    autoflake>=2
+    black>=23.1
     isort>=5
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports --exclude ".pytype" .
@@ -59,9 +59,9 @@ commands =
 [testenv:lint]
 skip_install = true
 deps =
-    codespell
-    mypy>=0.931
-    pylama>=8.3.6
+    codespell>=2
+    mypy>=1
+    pylama>=8.4.1
 commands =
     python setup.py check
     mypy simplesqlite
