--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -61,8 +61,7 @@ jobs:
           restore-keys: ${{ matrix.os }}-${{ matrix.python-version }}-pip-
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade tox
+        run: make setup-ci
 
       - name: Run tests
         run: tox -e cov -- --discord-verbose=0
