--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ exclude = '''
 )/
 | docs/conf.py
 '''
-target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
+target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
 
 [tool.isort]
 known_third_party = [
