--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -56,12 +56,79 @@ jobs:
         run: make setup-ci
 
       - name: Run tests
-        run: tox -e cov -- --discord-verbose=0
+        run: tox -e py -- --discord-verbose=0
+
+  run-coverage:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.10']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    timeout-minutes: 20
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: pip
+          cache-dependency-path: |
+            setup.py
+            **/*requirements.txt
+            tox.ini
+
+      - name: Setup env
+        run: echo "COVERAGE_FILE=.coverage_${{ matrix.os }}_${{ matrix.python-version }} " >> $GITHUB_ENV
+
+      - name: Install dependencies
+        run: make setup-ci
+
+      - name: Run tests
+        run: tox -e cov
+
+      - run: ls -a
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: .coverage_*
+
+  upload-coverage:
+    needs: run-coverage
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: coverage
+          path: artifact
+
+      - name: List
+        working-directory: artifact
+        run: |
+          set -x
+
+          pwd
+          ls -alR
+
+      - name: Install packages
+        run: python -m pip install --upgrade --disable-pip-version-check coveralls tomli
+
+      - name: Combine coverage reports
+        run: |
+          coverage combine artifact/.coverage_*
+          ls -alR
 
       - name: Upload coverage report
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          python -m pip install --upgrade --disable-pip-version-check coveralls tomli
-          coveralls --service=github
+        run: coveralls --service=github
