--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -2,9 +2,6 @@ name: Lint and Test
 
 on: [push, pull_request]
 
-env:
-  PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
-
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -56,7 +53,7 @@ jobs:
         run: make setup-ci
 
       - name: Run tests
-        run: tox -e py -- --discord-verbose=0
+        run: tox -e py
 
   run-coverage:
     runs-on: ${{ matrix.os }}
@@ -90,7 +87,9 @@ jobs:
         run: make setup-ci
 
       - name: Run tests
-        run: tox -e cov
+        env:
+          PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
+        run: tox -e cov -- --discord-verbose=0
 
       - run: ls -a
 
