--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -28,6 +28,21 @@ jobs:
       - name: Lint
         run: make check
 
+  build-docs:
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.ref_name }}-docs
+      cancel-in-progress: true
+    timeout-minutes: 20
+    container:
+      image: ghcr.io/thombashi/python-ci:3.11
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Lint
+        run: make docs
+
   unit-test:
     runs-on: ${{ matrix.os }}
     concurrency:
