--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -51,11 +51,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11','pypy-3.8']
-        os: [ubuntu-20.04, macos-latest, windows-latest]
-        exclude:
-          - os: windows-latest
-            python-version: '3.6'
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11','pypy-3.8']
+        os: [ubuntu-latest, macos-latest, windows-latest]
     timeout-minutes: 30
 
     steps:
