--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,8 @@
 [build-system]
-requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+requires = ["setuptools>=61.0"]
 
 [tool.black]
-line-length = 100
 exclude = '''
 /(
       \.eggs
@@ -19,50 +18,51 @@ exclude = '''
 )/
 | docs/conf.py
 '''
+line-length = 100
 target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
 
 [tool.isort]
-known_third_party = [
-    'dataproperty',
-    'logbook',
-    'mbstrdecoder',
-    'pandas',
-    'pathvalidate',
-    'pytablereader',
-    'pytest',
-    'sphinx_rtd_theme',
-    'sqliteschema',
-    'tabledata',
-    'typepy',
-    'xlsxwriter',
-]
 include_trailing_comma = true
+known_third_party = [
+  'dataproperty',
+  'logbook',
+  'mbstrdecoder',
+  'pandas',
+  'pathvalidate',
+  'pytablereader',
+  'pytest',
+  'sphinx_rtd_theme',
+  'sqliteschema',
+  'tabledata',
+  'typepy',
+  'xlsxwriter',
+]
 line_length = 100
 lines_after_imports = 2
 multi_line_output = 3
 skip_glob = [
-    '*/.eggs/*',
-    '*/.pytype/*',
-    '*/.tox/*',
+  '*/.eggs/*',
+  '*/.pytype/*',
+  '*/.tox/*',
 ]
 
 [tool.coverage.run]
-source = ['simplesqlite']
 branch = true
+source = ['simplesqlite']
 
 [tool.coverage.report]
-show_missing = true
-precision = 1
 exclude_lines = [
-    'except ImportError',
-    'raise NotImplementedError',
-    'pass',
-    'ABCmeta',
-    'abstractmethod',
-    'abstractproperty',
-    'abstractclassmethod',
-    'warnings.warn',
+  'except ImportError',
+  'raise NotImplementedError',
+  'pass',
+  'ABCmeta',
+  'abstractmethod',
+  'abstractproperty',
+  'abstractclassmethod',
+  'warnings.warn',
 ]
+precision = 1
+show_missing = true
 
 [tool.mypy]
 ignore_missing_imports = true
@@ -74,11 +74,9 @@ show_error_context = true
 warn_unused_configs = true
 
 [tool.pytest.ini_options]
-testpaths = [
-    "test",
-]
+testpaths = ["test"]
 
 md_report = true
-md_report_verbose = 0
 md_report_color = "auto"
+md_report_verbose = 0
 md_report_zeros = "number"
