--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,8 +83,7 @@ jobs:
       - name: Install pip
         run: python -m pip install --upgrade --disable-pip-version-check "pip>=21.1"
 
-      - name: Install dependencies
-        run: make setup-ci
+      - run: make setup-ci
 
       - name: Run tests
         run: tox -e py
@@ -117,8 +116,7 @@ jobs:
       - name: Setup env
         run: echo "COVERAGE_FILE=.coverage_${{ matrix.os }}_${{ matrix.python-version }} " >> $GITHUB_ENV
 
-      - name: Install dependencies
-        run: make setup-ci
+      - run: make setup-ci
 
       - name: Run tests
         env:
