--- a/tox.ini
+++ b/tox.ini
@@ -65,7 +65,7 @@ deps =
     mypy>=1
     pylama>=8.4.1
 commands =
-    mypy simplesqlite
+    mypy simplesqlite sample
     codespell simplesqlite docs/pages sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
     pylama setup.py test sample simplesqlite
 
