--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,6 +184,6 @@ jobs:
             **/*requirements.txt
             tox.ini
 
-      - run: python -m pip install --upgrade --disable-pip-version-check .
+      - run: make setup
 
       - run: make run-sample
