--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,6 +184,9 @@ jobs:
             **/*requirements.txt
             tox.ini
 
-      - run: make setup
+      - name: Install packages
+        run: |
+          make setup
+          python -m pip install --upgrade --disable-pip-version-check pandas
 
       - run: make run-sample
