--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,6 +187,6 @@ jobs:
       - name: Install packages
         run: |
           make setup
-          python -m pip install --upgrade --disable-pip-version-check pandas
+          python -m pip install --upgrade --disable-pip-version-check pandas XlsxWriter
 
       - run: make run-sample
