--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ exclude = '''
 | docs/conf.py
 '''
 line-length = 100
-target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
+target-version = ['py39', 'py310', 'py311', 'py312']
 
 [tool.isort]
 include_trailing_comma = true
@@ -64,7 +64,7 @@ show_missing = true
 
 [tool.mypy]
 ignore_missing_imports = true
-python_version = 3.7
+python_version = 3.9
 
 pretty = true
 
