Replace mypy with pyright
Signed-off-by: Tsuyoshi Hombashi <tsuyoshi.hombashi@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -59,15 +59,34 @@ commands =
     black setup.py test sample simplesqlite
 
 [testenv:lint]
-skip_install = true
+extras =
+    logging
 deps =
     codespell>=2
-    mypy>=1
+    pandas
+    pyright>=1.1
+    pytablereader
     pylama>=8.4.1
+    releasecmd
 commands =
-    mypy simplesqlite sample
-    codespell simplesqlite docs/pages sample test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
-    pylama setup.py test sample simplesqlite
+    pyright simplesqlite setup.py
+    codespell simplesqlite docs/pages test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
+    pylama setup.py test simplesqlite
+
+[testenv:lint-examples]
+extras =
+    logging
+deps =
+    codespell>=2
+    pandas
+    pyright>=1.1
+    pytablereader
+    pylama>=8.4.1
+    XlsxWriter
+commands =
+    pyright sample
+    codespell sample -q2 --check-filenames
+    pylama sample
 
 [testenv:readme]
 changedir = docs
