Remove unnecessary option from autoflake command in tox.ini
Signed-off-by: Tsuyoshi Hombashi <tsuyoshi.hombashi@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ deps =
     black>=23.1
     isort>=5
 commands =
-    autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports .
+    autoflake --in-place --recursive --remove-all-unused-imports .
     isort .
     black setup.py test sample simplesqlite
 
