Update tox.ini to replace black with ruff for formatting
Signed-off-by: Tsuyoshi Hombashi <tsuyoshi.hombashi@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -51,12 +51,12 @@ commands =
 skip_install = true
 deps =
     autoflake>=2
-    black>=23.1
     isort>=5
+    ruff>=0.8
 commands =
     autoflake --in-place --recursive --remove-all-unused-imports .
     isort .
-    black setup.py test sample simplesqlite
+    ruff format
 
 [testenv:lint]
 extras =
