--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,3 +99,14 @@ md_report = true
 md_report_color = "auto"
 md_report_verbose = 0
 md_report_zeros = "number"
+
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+exclude = [
+    ".eggs/",
+    ".tox/",
+    "_sandbox/*",
+    "build/",
+    "docs/conf.py",
+]
