--- a/tox.ini
+++ b/tox.ini
@@ -66,12 +66,13 @@ deps =
     pandas
     pyright>=1.1
     pytablereader
-    pylama>=8.4.1
     releasecmd
+    ruff>=0.8
 commands =
     pyright simplesqlite setup.py
     codespell simplesqlite docs/pages test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
-    pylama setup.py test simplesqlite
+    ruff format --check setup.py test simplesqlite
+    ruff check setup.py test simplesqlite
 
 [testenv:lint-examples]
 extras =
@@ -81,12 +82,13 @@ deps =
     pandas
     pyright>=1.1
     pytablereader
-    pylama>=8.4.1
+    ruff>=0.8
     XlsxWriter
 commands =
     pyright sample
     codespell sample -q2 --check-filenames
-    pylama sample
+    ruff format --check sample
+    ruff check sample
 
 [testenv:readme]
 changedir = docs
