--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ commands =
     pyright simplesqlite setup.py
     codespell simplesqlite docs/pages test -q2 --check-filenames --ignore-words-list te -x "test/data/python - Wiktionary.html"
     ruff format --check setup.py test simplesqlite
-    ruff check setup.py test simplesqlite
+    ruff check setup.py simplesqlite
 
 [testenv:lint-examples]
 extras =
