--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,83 +88,31 @@ jobs:
       - run: make setup-ci
 
       - name: Run tests
-        run: tox -e py
+        run: tox -e cov
 
-  run-coverage:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.13"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    timeout-minutes: 20
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
-          cache-dependency-path: |
-            setup.py
-            **/*requirements.txt
-            tox.ini
-
-      - name: Setup env
-        run: echo "COVERAGE_FILE=.coverage_${{ matrix.os }}_${{ matrix.python-version }} " >> $GITHUB_ENV
-
-      - run: make setup-ci
-
-      - name: Run tests
-        env:
-          PYTEST_DISCORD_WEBHOOK: ${{ secrets.PYTEST_DISCORD_WEBHOOK }}
-        run: tox -e cov -- --discord-verbose=0
-
-      - run: ls -a
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: coverage
-          path: .coverage_*
-
-  upload-coverage:
-    needs: run-coverage
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: coverage
-          path: artifact
-
-      - name: List
-        working-directory: artifact
-        run: |
-          set -x
-
-          pwd
-          ls -alR
-
-      - name: Install packages
+      - name: Install coveralls
         run: python -m pip install --upgrade --disable-pip-version-check coveralls tomli
 
-      - name: Combine coverage reports
-        run: |
-          coverage combine artifact/.coverage_*
-          ls -alR
-
-      - name: Upload coverage report
+      - name: Upload coverage data to coveralls.io
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: coveralls --service=github
+          COVERALLS_FLAG_NAME: ${{ matrix.os }}-${{ matrix.python-version }}
+          COVERALLS_PARALLEL: true
+        run: coveralls
+
+  coveralls:
+    name: Indicate completion to coveralls.io
+    needs: unit-test
+    runs-on: ubuntu-latest
+    container: python:3-slim
+
+    steps:
+    - run: python -m pip install --upgrade coveralls
+
+    - name: Finished
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: coveralls --finish
 
   run-sample:
     runs-on: ubuntu-latest
@@ -188,7 +136,7 @@ jobs:
 
       - name: Install packages
         run: |
-          make setup
+          make setup-dev
           python -m pip install --upgrade --disable-pip-version-check pandas pytablereader[excel] XlsxWriter
 
       - run: make run-sample
